<resources>
    <string name="app_name">OpenWeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_city_list">List of cities</string>
    <string name="title_weather">City</string>
    <string name="error_city_list">List of cities is empty</string>
    <string name="empty_string">-</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_info">Humidity:</string>
    <string name="pressure">Pressure</string>
    <string name="atmospheric_pressure_above_sea_level">Atmospheric pressure above sea level</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">Wind speed</string>
    <string name="direction_of_the_wind">Direction of the wind</string>
    <string name="atmospheric_pressure_above_ground_level">Atmospheric pressure above ground level</string>
</resources>